# Pupina-Depoly

./: CMakeLists.txt  LICENSE.txt  README.md
TensorRT_depoly_202401_alexnet/: CMakeLists.txt
TensorRT_depoly_202401_alexnet/c/: build.cpp
TensorRT_depoly_202401_alexnet/workspace/models/logs/: best-5.pth  model.onnx
TensorRT_depoly_202402_yolov5/: CMakeLists.txt
TensorRT_depoly_202402_yolov5/c/: decode.cu  main.cpp  v5.cpp  v5.hpp
TensorRT_depoly_202402_yolov5/c/tensorRT/builder/: trt_builder.hpp
TensorRT_depoly_202402_yolov5/c/tensorRT/common/: cv_cpp_utils.hpp  memory.cpp  preprocess_kernel.cu  preprocess_kernel.cuh  trt_tensor.hpp
TensorRT_depoly_202402_yolov5/c/tensorRT/infer/: trt_infer.hpp
TensorRT_depoly_202403_yolov8/: CMakeLists.txt
TensorRT_depoly_202403_yolov8/c/: decode.cu  main.cpp  v8.cpp  v8.hpp
TensorRT_depoly_202403_yolov8/c/tensorRT/common/: cv_cpp_utils.cpp  ilogger.hpp  preprocess_kernel.cu  preprocess_kernel.cuh
TensorRT_depoly_202403_yolov8/c/tensorRT/infer/: infer_controller.hpp  monopoly_allocator.hpp
TensorRT_utils/: export_traindata_darknet.py  export_traindata_v5.py
cmake/: FindTensorRT.cmake
experiment/: model.engine
experiment/c/: runtime.cu
experiment/workspace/models/: dataset.py  model.py  train.py  utils.py
src/: main.cpp
src/application/: app_depthanything.cpp  app_yolo_det.cpp  app_yolo_seg.cpp
src/application/app_depthanything/: depth_v2.cpp  depth_v2.hpp
src/application/app_yolo_det/: yolo.cpp  yolo.hpp  yolo_decode.cu
src/application/app_yolo_seg/: yolo_seg.cpp  yolo_seg.hpp  yolo_seg_decode.cu
src/tensorRT/builder/: trt_builder.cpp  trt_builder.hpp
src/tensorRT/common/: cuda_tools.cpp  cuda_tools.hpp  cv_cpp_utils.cpp  cv_cpp_utils.hpp  ilogger.cpp  memory.hpp  trt_tensor.cpp
src/tensorRT/infer/: template_infer.hpp  trt_infer.cpp
tools/: export_traindata_v8_seg.py
